--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,24 +5,44 @@
 
 @import "compass/css3/box-sizing";
 
-@import "_normalize";
+@import "normalize";
+@import "vars-typeplate";
+@import "typeplate";
 
 * {
   @include box-sizing(border-box);
 }
 
-body {
-  text-align: center;
+// Typography
+
+.frame {
+  max-width: 50em;
+  margin: 0 auto;
+  padding: 0 2em
 }
 
-.container {
-  text-align: left;
-  max-width: 960px;
-  margin: 0 auto;
-  .content {
-    margin: 0 20px;
+.blog-header {
+  text-align: center;
+  background-color: #777;
+  padding: 2em 0;
+}
+
+.blog-nav > ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  li {
+    display: inline;
+    padding: 1em;
   }
 }
+
+.blog-content {
+  h1 {
+    @extend .gamma;
+  }
+}
+
 
 
 
