--- a/sass/_breaks.scss
+++ b/sass/_breaks.scss
@@ -4,3 +4,51 @@
       padding: 1em;
   }
 } */
+
+$break-mid: 60em;
+$sidebar-width-mid: 20em;
+$break-large: 90em;
+$sidebar-width-large: 25em;
+
+@media(min-width: $break-mid) {
+  h1 { font-size: 2.1em; }
+  h2 { font-size: 1.2em; }
+
+  .blog-header, .blog-footer {
+    position:fixed;
+    bottom: 0;
+    left: 0;
+    width: $sidebar-width-mid;
+  }
+
+  .blog-header {
+    top: 0;
+    z-index: 1;
+  }
+
+  .blog-footer {
+    z-index: 2;
+    text-align: left;
+    padding: 0 0 1em 0;
+  }
+
+  .blog-content-container {
+    margin-left: $sidebar-width-mid;
+  }
+
+  .frame {
+    max-width: 99999999em;
+  }
+}
+
+@media(min-width: $break-large) {
+  h1 { font-size: 2.2em; }
+
+  .blog-header, .blog-footer {
+    width: $sidebar-width-large;
+  }
+
+  .blog-content-container {
+    margin-left: $sidebar-width-large;
+  }
+}
