--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -3,8 +3,8 @@ body {
   font-family: 'Merriweather', 'sans-serif';
 }
 
-h1 { font-size: 2.5em; }
-h2 { font-size: 1.2em; }
+h1 { font-size: 2.4em; }
+h2 { font-size: 1.3em; line-height: 1.4em }
 
 p {
   line-height: 1.6em;
