--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -12,7 +12,9 @@
   @include box-sizing(border-box);
 }
 
-
+body {
+  background-color: #fefefe;
+}
 
 .frame {
   max-width: 50em;
@@ -88,11 +90,12 @@
 
 
 .blog-footer {
-  padding: 0.3em 0;
+  padding: 0.8em 0;
   text-align: right;
   p {
     font-size: 0.9em;
     color: #eee;
+    margin: 0;
   }
   a {
     color: #eee;
